@@ -32,7 +32,7 @@ module Psych
         return result if @domain_types.empty? || !target.tag
 
         key = target.tag.sub(/^[!\/]*/, '').sub(/(,\d+)\//, '\1:')
-        key = "tag:#{key}" unless key =~ /^(tag:|x-private)/
+        key = "tag:#{key}" unless key =~ /^(?:tag:|x-private)/
 
         if @domain_types.key? key
           value, block = @domain_types[key]
@@ -89,7 +89,7 @@ module Psych
           Float(@ss.tokenize(o.value))
         when "!ruby/regexp"
           klass = class_loader.regexp
-          o.value =~ /^\/(.*)\/([mixn]*)$/
+          o.value =~ /^\/(.*)\/([mixn]*)$/m
           source  = $1
           options = 0
           lang    = nil
